--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,8 @@ spring:
   h2:
     console:
       enabled: true
+  config:
+    import: file:.env[.properties]
+weather-stack:
+  api-url: http://api.weatherstack.com/current
+  api-key: ${API-KEY:default}
