--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,27 @@ services:
     image: 'weather-latest'
     build:
       context: .
+    deploy:
+      mode: replicated
+      replicas: 3
     ports:
-      - "9999:8080"
+      - "9997-9999:8080"
     environment:
       - "API_URL=${API_URL}"
       - "API_KEY=${API_KEY}"
+    networks:
+      weather-network:
+  prometheus:
+    image: prom/prometheus:v2.36.2
+    container_name: prometheus
+    restart: unless-stopped
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./data/prometheus/config:/etc/prometheus/
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+    networks:
+      weather-network:
+networks:
+  weather-network:
